# Conjecture

./: .claude.json  .coveragerc  .env.backup.20251111_071946  .env.example  .env.test  .gitignore  .gitleaks.toml  .gitleaksignore  .kilocodemodes  .phased_testing_config.json  ACTIONABLE_IMPROVEMENT_PLAN.md  AGENTS.md  ANALYSIS.md  ANALYSIS_INDEX.md  ANALYSIS_SUMMARY.txt  ANALYSIS_SUMMARY_PERFORMANCE_UX_SECURITY.md  ANALYSIS_SUMMARY_SWEBENCH_COMBINATION.txt  CHOICES.md  CLAUDE.md  CLI_CONSOLIDATION_COMPLETE.md  CLI_CONSOLIDATION_FINAL.md  CLI_CONSOLIDATION_GUIDE.md  CODE_SIZE_REDUCTION_PLAN.md  COMPLEXITY_REDUCTIONS_COMPLETE.md  COMPREHENSIVE_FEATURE_OUTLINE.md  COMPREHENSIVE_GAP_ANALYSIS_REPORT.md  COMPREHENSIVE_INSIGHTS_REPORT.md  COMPREHENSIVE_ROADMAP_V1_0.md  CONFIG_WIZARD_README.md  CONTEXT.md  CONTEXT_OPTIMIZATION_REPORT.md  CONTRIBUTING.md  COVERAGE_ANALYSIS_REPORT.md  ContextFlow_Elegant_Transformation_Report.md  ContextFlow_Implementation_Guide_2025.md  ContextFlow_Research_Recommendations_2025.md  DASHBOARD.md  DISCOVERY_SIMPLIFICATION_COMPLETE.md  DprojectsConjectureANALYSIS_SUMMARY.txt  DprojectsConjectureFINAL_ANALYSIS_OUTPUT.json  (+266 more)
.agent/: ANALYSIS_SUMMARY.txt  EXECUTIVE_SUMMARY.md  MIGRATION_SUMMARY.md  MINI_SWE_AGENT_IMPLEMENTATION_GUIDE.md  REACT_PATTERNS_SEARCH_RESULTS.md  SEARCH_INDEX.md  SEARCH_SUMMARY.txt  SWEBENCH_FINDINGS.txt  SWEBENCH_FUNCTIONAL_SECURITY_BUSINESS_SYNTHESIS.md  backlog.md  extract_learning.py  learning.yaml  migrate_criteria.py  next_steps.json  progress_report.json  success_criteria.json  success_criteria_validation.json  swebench_functional_security_business_analysis.json  test_summary.md  validation_report.json  work_complete.json  work_complete_T-032.json
.conjecture/: README.md  README_USER_DATA.md  config.example.json  config.json
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
.director/: BLOCKERS.md  COMPLETE_SESSION_SUMMARY.md  EXPLORATION_SESSION.md  LFM_BREAKTHROUGH.md  NEXT_SESSION_RESUME.md  PATTERN_ANALYSIS.md  SESSION_2026-03-06_SUMMARY.md  SESSION_FINDINGS.md  SESSION_SUMMARY.md  STATISTICAL_REALITY_CHECK.md  THREE_PROMPT_VALIDATION_COMPLETE.md  TIER_1_COMPLETE.md  TIER_1_SUMMARY.md  VARIATION_03_RESULTS.md  WORKTREE_EXPLORATION_PLAN.md  WORKTREE_FINDINGS.md  inbox.jsonl  outbox.jsonl  pulse.json  state.json
.journal/: events.jsonl  state.json
.opencode/: GLM_4.7_FREE_OVERRIDE.md  GLM_OVERRIDE.md  MIGRATION.md  TEST_RESULTS_GLM_4.7_FREE.md  opencode.json
Conjecture/: EmbeddingMethods.py
archive/: CLI_TEST_EXECUTION_LOG.md  CORRECTED_PROCESSING_DEMO.md  ContextFlow_Analysis_Report.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  README.md  RND_FINDINGS.md  collection_log.txt  ibm_granite_tiny_integration_guide.md  index.md  phase3_architecture.md  removed_2025-12-19_enhanced_sqlite_manager.py  stored-2025-01-07.md
benchmarks/: answer_extraction.py  baseline_cache.json  batch_results.json  deepeval_suite.py  optimal_prompts.json  prompt_batch_optimize.py  quick_benchmark.py  test_v15_adaptive.py  test_v15_adaptive_direct.py  test_v9_verify.py  test_v9_verify_simple.py  v0_passthrough_results.json  v15_adaptive_results.json  v6_structured_results.json  v7_answer_only_results.json  v9_verify_results.json
blog/: index.html
core_tools/: apply_diff.py  claim_tools.py  file_tools.py  interaction_tools.py  webSearch.py  writeFiles.py
demo/: demo_simplified_architecture.py  setup_demo.py  simple_conjecture.py  simple_conjecture_cli_redirected.py  unified_api_demo.py
docs/: ANSWER_EXTRACTION_IMPROVEMENTS.md  CLAUDES_TODOLIST.md  COVERAGE_IMPLEMENTATION_FINAL_REPORT.md  COVERAGE_IMPLEMENTATION_SUMMARY.md  COVERAGE_INFRASTRUCTURE_GUIDE.md  COVERAGE_WORKFLOW.md  ClaimProcessing.md  DOMAIN_CLAIM_TEMPLATES.md  Documentation-Evaluation.md  Documentation-Rubric.md  ENV_IMPLEMENTATION_SUMMARY.md  PROJECT_ORGANIZATION_SUMMARY.md  PROMPT_VARIANT_BENCHMARK.md  RND_COMPREHENSIVE_REPORT.md  RND_FINDINGS.md  architecture_gap_analysis.md  claims_philosophy.md  examples.md  (+24 more)
(+1556 files in other folders)
