[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conjecture"
version = "0.1.0"
description = "AI-Powered Evidence-Based Reasoning System"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Conjecture Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "chromadb==0.4.15",
    "pydantic==2.5.2",
    "pydantic-settings>=2.0.0",
    "faiss-cpu",
    "sentence-transformers",
    "numpy",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "timeout-decorator>=0.5.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tenacity>=8.2.0",
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    "asyncio-mqtt>=0.11.0",
    "ddgs>=9.0.0",
    "emoji>=2.15.0",
    "windows-curses>=2.3.0; sys_platform == \"win32\"",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "vulture>=2.0.0",
    "pylint>=3.0.0",
    "bandit>=1.7.0",
    "types-requests",
    "types-setuptools",
]


[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90", "B", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pylint.messages_control]
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
    "R0903", # too-few-public-methods
]

[tool.vulture]
min_confidence = 80
paths = ["src", "tests"]
sort_by_size = true

[project.scripts]
conjecture = "conjecture:main"


[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src" = ["**/*.py", "**/*.json", "**/*.md"]